--- a/templates/register.html
+++ b/templates/register.html
@@ -6,11 +6,11 @@
     </div>
     <h1 class="page-title">Sign Up</h1>
     <h2 class="page-tagline center-text">Allows you to bookmark your favourite recipes and add your own.</h2>
-    <form id="login-form" class="form" action="POST" target="{{ url_for('register') }}" method="post">
+    <form id="login-form" class="form" action="{{ url_for('register') }}" method="POST">
          <!--Reg Usernane-->
         <div class="row">
             <div class="col-12">
-                <label for="reg-username" class="form__label">Username <span class="form__input-info">Max 12 characters.</span></label>
+                <label for="reg-username" class="form__label">Username <span class="form__input-info form__input-info--right">Max 12 characters.</span></label>
                 <input type="text" name="reg-username" class="form__input" id="reg-username" placeholder="examplebartender" maxlength="12" required>
             </div>
         </div>
@@ -18,13 +18,11 @@
         <!--Reg Password-->
         <div class="row">
             <div class="col-12">
-                <label for="reg-password" class="form__label">Password <span class="form__input-info">No specail characters.</span></label>
-                <input type="password" name="reg-password" class="form__input" id="reg-password" placeholder="Type your passsword here" maxlength="25" required>
-                
-                <!--Reg ConfirmPassword-->
-                <label for="confirm-password" class="form__label">Confirm Password</label>
-                <input type="password" name="confirm-password" class="form__input" id="confirm-password" placeholder="Make sure it matches" maxlength="25" required>
+                <label for="reg-password" class="form__label">Password <span class="form__input-info form__input-info--right">Click eye to toggle password visibility</span></label>
+                <input type="password" name="reg-password" class="form__input" id="reg-password" placeholder="Type your passsword here" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" minlength="6" maxlength="25" required>
+                <p class="form__input-info form__input-info--bottom">Must contain at least: one number, one uppercase letter, one lowercase letter and be at least 6 or more characters</p>
             </div>
+            <p class="form__input-check">Please check your password is correct before submitting</p>
             <input type="submit" class="cta cta--form" id="signup-submit" value="Sign Up" aria-label="sign up button">
         </div> 
     </form>
