--- a/static/css/style.css
+++ b/static/css/style.css
@@ -344,8 +344,9 @@ ul {
 }
 
 .form__input-check {
-    margin: 0 auto;
+    text-align: center;
     margin-top: 16px;
+    width: 100%;
 }
 
 .form__text-area {
