--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,6 +138,15 @@ ul {
     padding-right: 22px;
 }
 
+/*------------------------------------------------------Flash Massage--*/
+.flash-massage {
+    margin: 0 auto;
+    text-align: center;
+    color: blue;
+    padding: 10px 0;
+    font-size: 1.25rem;
+}
+
 /*------------------------------------------------------Site Header--*/
 .site-header {
     width: 100%;
