--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,16 @@
     </div>
     <h1 class="page-title">Sign Up</h1>
     <h2 class="page-tagline center-text">Allows you to bookmark your favourite recipes and add your own!</h2>
+    <!--Flash Messages-->
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="flash-massage">
+                    <h4>{{ message }}</h4>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <form id="login-form" class="form" action="{{ url_for('register') }}" method="POST">
          <!--Reg Usernane-->
         <div class="row">
