--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-    <form id="login-form" class="form" action="{{ url_for('register') }}" method="POST">
+    <form id="resigter-form" class="form" action="{{ url_for('register') }}" method="POST">
          <!--Reg Usernane-->
         <div class="row">
             <div class="col-12">
