--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -148,5 +148,5 @@
     </section>
 {% endblock %}
 {% block scripts %}
-    <script defer src="{{ url_for('static', filename='js/create-cocktail.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='js/cocktail-form.js') }}"></script>
 {% endblock %}
