--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -12,7 +12,7 @@
     </section>
 
     <!--Cocktail Info-->
-    <section class="cocktail">
+    <section class="cocktail cocktail-body">
         <div class="cocktail__row row">
 
             <!--Cocktail Ingredients-->
