--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -94,12 +94,12 @@
                         <li class="garnish">
 
                             <!--Amount-->
-                            <input type="text" id="garish-amount-1" name="garish-amount-1" class="form-cocktail__input form-cocktail__input--amount" 
-                                pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="1" aria-label="enter garish amount" required>
+                            <input type="text" id="garnish-amount-1" name="garnish-amount-1" class="form-cocktail__input form-cocktail__input--amount" 
+                                pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="1" aria-label="enter garnish amount" required>
                             
                             <!--Name-->
-                            <input type="text" id="garish-name-1" name="garish-name-1" class="form-cocktail__input" placeholder="Garnish Name" 
-                                aria-label="enter garish name" required>
+                            <input type="text" id="garnish-name-1" name="garnish-name-1" class="form-cocktail__input" placeholder="Garnish Name" 
+                                aria-label="enter garnish name" required>
                             
                             <!--Remove Item Button-->
                             <button class="remove-garnish cocktail-btn cocktail-btn--remove" type="button">
