Add hidden inputs to cocktail creation form set on submission
Hidden inputs are set by a javascirpt function

These inputs are then used by the back end to stage the info to be put into
the database.

--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -209,6 +209,14 @@
                     </button>
                 </div>
             </div>
+
+            <!--Hidden Inputs Used for backend functions-->
+            <input type="hidden" id="no-of-ingred" name="no-of-ingred" value="0">
+            <input type="hidden" id="no-of-garnish" name="no-of-garnish" value="0">
+            <input type="hidden" id="no-of-tools" name="no-of-tools" value="0">
+            <input type="hidden" id="no-of-instr" name="no-of-instr" value="0">
+            <input type="hidden" id="no-of-tips" name="no-of-tips" value="0">
+            <input type="hidden" id="publish" name="no-of-tool" value="false">
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
