Update cocktail create form inputs ids both static and dynamic

--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -176,7 +176,7 @@
                     <h2 class="cocktail__item-title">Instructions</h2>
                     <ol id="cocktail-instructions" class="cocktail__info">
                         <li class="instruction">
-                            <textarea id="cocktail-instruction-text-1" name="cocktail-instruction-text-1" class="form-cocktail__input form-cocktail__text-area" 
+                            <textarea id="instruction-1" name="instruction-1" class="form-cocktail__input form-cocktail__text-area" 
                                 rows="3" placeholder="Type Instructions Here" maxlength="400" aria-label="enter instruction" required></textarea>
                         </li>
                     </ol>
@@ -192,7 +192,7 @@
                     <h2 class="cocktail__item-title">Tips</h2>
                     <ul id="cocktail-tips" class="cocktail__info">
                         <li class="form-tip">
-                            <textarea id="cocktail-tip-text-1" name="cocktail-tip-text-1" 
+                            <textarea id="tip-1" name="tip-1" 
                                 class="form-cocktail__input form-cocktail__text-area form-cocktail__text-area--tip" rows="3" placeholder="Type your tip here" 
                                 maxlength="200" aria-label="enter tip" required></textarea>
                             
@@ -216,7 +216,6 @@
             <input type="hidden" id="no-of-tools" name="no-of-tools" value="0">
             <input type="hidden" id="no-of-instr" name="no-of-instr" value="0">
             <input type="hidden" id="no-of-tips" name="no-of-tips" value="0">
-            <input type="hidden" id="publish" name="no-of-tool" value="false">
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
