--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
                                         </p>
                                     </div>
                                     <div class="rec-card__col col-6">
-                                        <a href="#" class="rec-card__cta cta">Make It</a>
+                                        <a href="{{ url_for('cocktail', cocktail_name=tail.cocktail_name.replace(' ', '-')) }}" class="rec-card__cta cta">Make It</a>
                                     </div>
                                 </div>
                             </div>
